--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
         <div class="my-auto">
           <h2 class="mb-5">Portfolio</h2>
-      Comming soon...Play my hand-drawn <a href="https://ouyangtt.github.io/Hangman-Game" target="_blank">Hangman</a> game for now...
+      Coming soon...Play my hand-drawn <a href="https://ouyangtt.github.io/Hangman-Game" target="_blank">Hangman</a> game for now...
 
         </div>
       </section>
