--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           My undergraduate degree offers me the solid background to apply analytical skills. I took courses in pure mathematics, applied mathematics, statistics, the physical sciences, and industrial engineering. Throughout my Master career, I gained an understanding of the business, legal, professional and ethical context. I also immersed in community outreach – served as the president of Chi Pi Alpha (GGU Accounting Club).
           </p>
           <p>
-          I always love to learn new things. I’ve recently accomplished a 12-month coding Bootcamp and learned full stack development. I found it really interesting to build out a web application, to turn an idea into reality. I love the process of discovering new things and gradually be more comfortable with them. I am passionate about data analysis, solving complex and interesting real world tasks, making informed decisions by digging into data.
+          I always love to learn new things. I’ve recently accomplished a 12-week coding Bootcamp and learned full stack development. I found it really interesting to build out a web application, to turn an idea into reality. I love the process of discovering new things and gradually be more comfortable with them. I am passionate about data analysis, solving complex and interesting real world tasks, making informed decisions by digging into data.
           </p>
 
           <ul class="list-inline list-social-icons mb-0">
